# monad

./: .gitignore  CITATION.bib  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
.github/workflows/: macos-build.yml  ubuntu-build.yml  windows-build.yml
apps/: CMakeLists.txt  README.md
apps/1_2DGrid/: 1_2DGrid.cpp
apps/2_3DGrid/: 2_3DGrid.cpp
apps/3_DensityFunction/: 3_DensityFunction.cpp
apps/4_LinearElasticity/: 4_LinearElasticity.cpp  data.csv
apps/5_LinearDielectric/: 5_LinearDielectric.cpp
apps/6_LinearPiezoelectricity/: 6_LinearPiezoelectricity.cpp
assets/: create_image.py  create_teaser.py
assets/design1/: density.msh  u11.msh  u12.msh  u22.msh
assets/design2/: data.csv  density.msh  u11.msh  u12.msh  u22.msh
include/monad/: monad.hpp
include/monad/detail/: constants.hpp  eigen_utils.hpp  mean.hpp
include/monad/fem/element/: element_base.hpp  hex20.hpp  hex8.hpp  quad4.hpp  quad8.hpp
include/monad/fem/kernel/mechanical/: linear_elastic_kernel.hpp  linear_elastic_kernel_traits.hpp
include/monad/fem/kernel/multiphysics/: linear_piezoelectric_kernel.hpp
include/monad/fem/kernel/scalar/: linear_scalar_diffusive_kernel.hpp
include/monad/fem/operator/: dof_map.hpp  jacobi_preconditioner.hpp  matrix_free_operator.hpp
include/monad/fem/operator/mechanical/: linear_elastic_dof_traits.hpp  linear_elastic_matrix_free_operator_traits.hpp
include/monad/fem/operator/multiphysics/: linear_piezoelectric_dof_traits.hpp  linear_piezoelectric_matrix_free_operator_traits.hpp
include/monad/fem/operator/scalar/: linear_scalar_diffusive_dof_traits.hpp  (+1 more)
include/monad/field/: density_field.hpp  field_aliases.hpp  make_density_field_from_csv.hpp  make_density_field_from_function.hpp
include/monad/grid/: grid_2d_base.hpp  grid_3d_base.hpp  grid_aliases.hpp  grid_base.hpp  hex20_grid.hpp  hex20_topology.hpp  hex8_grid.hpp  hex8_topology.hpp  quad4_grid.hpp  quad4_topology.hpp  quad8_grid.hpp  quad8_topology.hpp  structured_grid.hpp
include/monad/integration/: integrate_matrix.hpp  integrate_scalar.hpp  quadrature_rule.hpp
include/monad/io/: save_grid.hpp  save_grid_and_density_field.hpp  save_grid_and_field.hpp  save_grid_and_nodal_field.hpp
include/monad/io/gmsh/: write_gmsh_densities.hpp  write_gmsh_elements.hpp  write_gmsh_header.hpp  write_gmsh_nodal_field.hpp  write_gmsh_nodes.hpp
include/monad/material/: bounds.hpp  material_aliases.hpp
include/monad/material/mechanical/: linear_elastic_material.hpp  linear_elastic_material_2d.hpp  linear_elastic_material_3d.hpp
include/monad/material/multiphysics/: linear_piezoelectric_material.hpp
include/monad/material/transport/: linear_transport_material.hpp  linear_transport_material_aliases.hpp
include/monad/solver/: identity_preconditioner.hpp  jacobi_preconditioner.hpp  periodic_cell_solver.hpp  solver_aliases.hpp  solver_options.hpp
include/monad/solver/mechanical/: linear_elastic_physics.hpp  linear_elastic_physics_traits.hpp  linear_elastic_policy.hpp  linear_elastic_solver.hpp
include/monad/solver/multiphysics/: linear_piezoelectric_physics.hpp  linear_piezoelectric_policy.hpp  linear_piezoelectric_solver.hpp
include/monad/solver/scalar/: linear_scalar_diffusive_physics.hpp  linear_scalar_diffusive_policy.hpp  linear_scalar_diffusive_solver.hpp  linear_scalar_diffusive_solver_aliases.hpp
src/: CMakeLists.txt
src/detail/: mean.cpp
src/fem/element/: hex20.cpp  hex8.cpp  quad4.cpp  quad8.cpp
src/field/: make_density_field_from_csv.cpp
src/grid/: hex20_grid.cpp  hex20_topology.cpp  hex8_grid.cpp  hex8_topology.cpp  quad4_grid.cpp  quad4_topology.cpp  quad8_grid.cpp  quad8_topology.cpp
src/io/gmsh/: write_gmsh_header.cpp
src/material/mechanical/: linear_elastic_2d.cpp  linear_elastic_3d.cpp
src/solver/: solver_options.cpp
tests/: CMakeLists.txt  test_common.hpp
tests/detail/: eigen_utils_test.cpp  mean_test.cpp
tests/fem/element/: element_test.cpp
tests/fem/kernel/mechanical/: linear_elastic_kernel_2d_test.cpp  linear_elastic_kernel_3d_test.cpp  linear_elastic_kernel_test.cpp
tests/fem/kernel/multiphysics/: linear_piezoelectric_kernel_2d_test.cpp  linear_piezoelectric_kernel_3d_test.cpp  linear_piezoelectric_kernel_test.cpp
tests/fem/kernel/scalar/: linear_scalar_diffusion_kernel_test.cpp
tests/fem/operator/mechanical/: linear_elastic_dof_traits_test.cpp  linear_elastic_matrix_free_operator_test.cpp
tests/fem/operator/multiphysics/: linear_piezoelectric_dof_traits_test.cpp  linear_piezoelectric_matrix_free_operator_test.cpp
tests/fem/operator/scalar/: linear_scalar_diffusion_dof_traits_test.cpp  linear_scalar_diffusion_matrix_free_operator_traits_test.cpp
tests/field/: density_field_test.cpp  make_density_field_from_csv_test.cpp  make_density_field_from_function_test.cpp
tests/field/csv/: bad1.csv  bad3.csv  bad4.csv  good.csv
tests/grid/: grid_2d_test.cpp  grid_3d_test.cpp  hex20_topology_test.cpp  hex8_topology_test.cpp  quad4_topology_test.cpp  quad8_topology_test.cpp  structured_grid_test.cpp
tests/grid/csv/: bad2.csv  bad6.csv
tests/integration/: integrate_matrix_test.cpp  integrate_scalar_test.cpp  quadrature_rule_test.cpp
tests/io/: save_grid_and_density_field_test.cpp  save_grid_and_field_test.cpp  save_grid_and_nodal_field_test.cpp  save_grid_test.cpp
tests/io/gmsh/: write_gmsh_densities_test.cpp  write_gmsh_elements_test.cpp  write_gmsh_header_test.cpp  write_gmsh_nodal_field_test.cpp  write_gmsh_nodes_test.cpp
tests/material/: bounds_test.cpp
tests/material/mechanical/: linear_elastic_material_2d_test.cpp  linear_elastic_material_3d_test.cpp
tests/material/multiphysics/: linear_piezoelectric_material_2d_test.cpp  linear_piezoelectric_material_3d_test.cpp  linear_piezoelectric_material_test.cpp
tests/material/transport/: linear_transport_material_test.cpp
tests/solver/: solver_options_test.cpp
tests/solver/mechanical/: linear_elastic_solver_test.cpp
tests/solver/multiphysics/: linear_piezoelectric_solver_test.cpp
tests/solver/scalar/: linear_scalar_diffusion_solver_test.cpp
